--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,23 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  collection: ^1.19.1
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.20.5
+  go_router: ^14.8.0
+  hooks_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  shared_preferences: ^2.5.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  custom_lint: ^0.7.3
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^2.6.4
+  riverpod_lint: ^2.6.4
   very_good_analysis: ^7.0.0
 
 flutter:
