--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.5
+  freezed_annotation: ^2.4.4
   go_router: ^14.8.0
   hooks_riverpod: ^2.6.1
+  json_annotation: ^4.9.0
   riverpod_annotation: ^2.6.1
   shared_preferences: ^2.5.2
   url_launcher: ^6.3.1
@@ -23,6 +25,8 @@ dev_dependencies:
   custom_lint: ^0.7.3
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.8
+  json_serializable: ^6.9.4
   riverpod_generator: ^2.6.4
   riverpod_lint: ^2.6.4
   very_good_analysis: ^7.0.0
