--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   go_router: ^14.8.0
   hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
+  qr_flutter: ^4.1.0
   riverpod_annotation: ^2.6.1
   shared_preferences: ^2.5.2
   url_launcher: ^6.3.1
