fix: disable wasm

--- a/.github/workflows/deploy_web.yaml
+++ b/.github/workflows/deploy_web.yaml
@@ -33,7 +33,7 @@ jobs:
           flutter config --enable-web
 
       - name: 🛠️ Build Web
-        run: flutter build web --release -t lib/main.dart --base-href /loker-ab/ --wasm
+        run: flutter build web --release -t lib/main.dart --base-href /loker-ab/
 
       - name: 🤖 Configure Github Actions
         run: |
